# gnome-desktop-testing

./: .gitignore  COPYING  MAINTAINERS  Makefile-functional-tests.am  Makefile-tests.am  Makefile.am  README  README.md  autogen.sh  conffile.ini  configure.ac  gnome-desktop-testing-runner.1  gnome-desktop-testing.doap  install-hook.py  meson.build  meson_options.txt  report.xsl  setup.py  shelleval.js
desktoptesting/: check.py  gnome.py  gnome_constants.py
gedit/: gedit_chains.py  gedit_chains.xml
gedit/data/: ascii.txt  ascii_data.xml  utf8.txt  utf8_data.xml
gnometesting/: check.py  gnome.py  gnome_constants.py  utils.py
seahorse/: generate_pgp.py  generate_pgp.xml  generate_ssh.py  generate_ssh.xml
seahorse/data/: generate_pgp.xml
src/: gnome-desktop-testing-runner.c  gnome-desktop-testing-runner.in  gnome-desktop-testing-runner.js  gnome-desktop-testing.desktop  gnome-ostree-integration-runner.desktop  gnome-ostree-integration-runner.in  gnome-ostree-integration-runner.js  gnome-ostree-run-installed-tests.desktop  gnome-ostree-run-installed-tests.in  gnome-ostree-run-installed-tests.js  gnome-ostree-systemd-coredump-export.c
tests/functional/: startstopapps.js
